--- a/META.yml
+++ b/META.yml
@@ -23,7 +23,7 @@ requires:
   LWP::UserAgent: 0
   MIME::Base64: 0
   Moose: 0
-  XML::LibXML: 0
+  MooseX::DOM: 0.00003
 resources:
   license: http://dev.perl.org/licenses/
 version: 0.00001
